# covidstats

./: README.md  requirements.txt
covidstatsproj/: build.sh  manage.py  pyproject.toml  render.yaml
covidstatsproj/covidstatsproj/: asgi.py  settings.py  urls.py  wsgi.py
covidstatsproj/tracker/: urls.py  views.py
covidstatsproj/tracker/static/css/: custom.css
covidstatsproj/tracker/static/js/: app.js
covidstatsproj/tracker/templates/tracker/: index.html
