[tool.poetry]
name = "covidstatsproj"
version = "0.1.0"
description = ""
authors = ["Anand Maurya <anandmaurya@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.8"
requests = "^2.28.1"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
